src/resources/css/common/MainWindow.css
/*
    Stylesheet code for the Main window.
*/


#bottomPanel                                    /* the widget in bottom, used to show master controls and NinjamPanel when connected in a ninjam server */
{
    min-height: 60px;
}


/* Zoom buttons in main window right bottom corner */
#zoomInButton,
#zoomOutButton
{
    background: rgba(0, 0, 0, 25);
    max-width: 16px;
    max-height: 16px;
    width: 16px;
    height: 16px;
    padding: 1px;
    margin: 1px;
    border: none;
}

#zoomInButton:hover,
#zoomOutButton:hover
{
    background-color: rgba(255, 255, 255, 60);
}



/* The small arrow used to collapse the local tracks
------------------------------------------------------*/

MainWindow #localControlsCollapseButton                    /* not collapsed */
{
    border: none;
    background: none;
    max-width: 6px;
    width: 6px;
    background-repeat: none;
    background-position: right center;
    background-image: url(:/images/mini arrow left.png);
}

MainWindow #localControlsCollapseButton::hover             /* hover effect when not collapsed */
{
   background-image: url(:/images/mini arrow left hover.png);
}

MainWindow #localControlsCollapseButton:checked            /* collapsed (arrow pointing to right side) */
{
   background-image: url(:/images/mini arrow right.png);
   background-position: center center;
}

MainWindow #localControlsCollapseButton::hover:checked     /* hover effect when collapsed */
{
   background-image: url(:/images/mini arrow right hover.png);
}



/* The tabBar used in center/content area
------------------------------------------------------*/
QTabBar::tab
{
    border: none;
    min-width: 8ex;
    padding: 3px;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 11px;
    color: black;
 }

